# yeastar-sms-bridge

./: .gitignore  Procfile  fixture.json  pyproject.toml  requirements.txt  runner.py
gateway/: admin.py  apps.py  helpers.py  models.py  scheduler.py  tasks.py
gateway/migrations/: 0001_initial.py  0002_initial.py  0004_auto_20210530_2349.py
gateway/tests/: conftest.py  factories.py  test_helpers.py  test_tasks.py
plugins/vtiger/: YeaSMS.php
sms/: admin.py  models.py  tasks.py  urls4api.py
sms/migrations/: 0001_initial.py  0002_initial.py  0004_auto_20210525_2200.py  0006_auto_20210525_2355.py  0007_smsmessage_status.py
sms/tests/: factories.py  test_apis.py  test_helpers.py  test_tasks.py
src/yeastar_sms_bridge/: Procfile  manage.py  pyproject.toml  pytest.ini
src/yeastar_sms_bridge/gateway/: helpers.py  models.py
src/yeastar_sms_bridge/gateway/migrations/: 0001_initial.py  0003_auto_20210526_0055.py  0005_auto_20210531_0011.py
src/yeastar_sms_bridge/gateway/tests/: conftest.py  test_helpers.py  test_models.py
src/yeastar_sms_bridge/sms/: admin.py  apis.py  apps.py  helpers.py  models.py  scheduler.py  tasks.py
src/yeastar_sms_bridge/sms/migrations/: 0001_initial.py  0003_auto_20210525_2122.py  0005_auto_20210525_2218.py  0008_auto_20210529_1451.py  0009_auto_20210530_1441.py
src/yeastar_sms_bridge/sms/tests/: conftest.py  factories.py  test_models.py  test_tasks.py
src/yeastar_sms_bridge/userapp/: admin.py
src/yeastar_sms_bridge/userapp/tests/: factories.py
src/yeastar_sms_bridge/yeastar_sms_bridge/: urls.py  wsgi.py
src/yeastar_sms_bridge/yeastar_sms_bridge/settings/: .env.sample  __init__.py  django.py  ysb.py
userapp/: models.py
userapp/migrations/: 0001_initial.py
userapp/tests/: factories.py
yeastar_sms_bridge/: asgi.py
yeastar_sms_bridge/settings/: .env.sample  __init__.py  django.py  ysb.py
